<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_700">

    <TextView
        android:id="@+id/name_header_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/confirm_alert"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>


<TextView
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_gravity="center_horizontal"
    android:gravity="top"
    android:padding="10dp"
    android:text="@string/confirm_answer"
    android:fontFamily="@font/roboto_regular"
    android:textColor="@color/black"
    android:textSize="20sp" />


<View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/colorPrimaryDark" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="1dp"
    android:padding="10dp"
    android:gravity="center|center_horizontal"
    android:orientation="horizontal"
    android:weightSum="2">


    <TextView
        android:id="@+id/no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="1dp"
        android:layout_weight="1.3"
        android:gravity="end"
        android:padding="1dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="1dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/confirm"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/title_size" />

</LinearLayout>


</LinearLayout>
