<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/round_blue_btn_bg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/question1"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/first_answer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_marginBottom="10dp"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/question_one" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dp"></View>

                        <RadioGroup
                            android:id="@+id/radioGroup_first_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_one"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_one" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_two"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_two" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_three"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_three" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_four"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_four" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/confirm_first"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/round_blue_btn_bg"
                            android:padding="10dp"
                            android:text="@string/confirm"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/title_size" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>