<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:drawablePadding="15dp"
                android:hint="@string/username_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:fontFamily="@font/firasans_light"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/title_size" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:drawablePadding="15dp"
                android:hint="@string/password_hint"
                android:fontFamily="@font/firasans_light"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/title_size">
            </EditText>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/round_blue_btn_bg"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/register_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/Register"
                android:textSize="@dimen/title_size"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>